chat & gossip implemented

--- a/public/style/Home/main.css
+++ b/public/style/Home/main.css
@@ -66,6 +66,7 @@
   color: white;
   font-size: 20px;
   text-align: center;
+  white-space: pre-wrap;
 }
 .home-content-chatbox::after {
   content: "";
