--- a/public/style/Sketcher/main.css
+++ b/public/style/Sketcher/main.css
@@ -38,28 +38,18 @@
 /* #endregion */
 
 /* #region modal */
-.sketcher-modal {
-  position: fixed;
-  z-index: 1000;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.sketcher-model-content {
+.sketcher-modal-content {
   border: 3px solid white;
   padding: 0 50px;
   text-align: center;
   white-space: pre-line;
 }
-.sketcher-model-content-buttons {
+.sketcher-modal-content-buttons {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
 }
-.sketcher-model-content-buttons > button {
+.sketcher-modal-content-buttons > button {
   width: 80px;
 }
 /* #endregion */
