--- a/public/style/main.css
+++ b/public/style/main.css
@@ -19,3 +19,26 @@ body {
   -ms-user-select: none; /* IE/Edge */
   user-select: none;
 }
+
+.modal,
+.modal-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+.modal {
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+.modal-active {
+  opacity: 1;
+}
+.modal-inactive {
+  opacity: 0;
+}
+.modal-container {
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
