--- a/public/style/GrainBrain/main.css
+++ b/public/style/GrainBrain/main.css
@@ -600,12 +600,13 @@
   bottom: 0;
 }
 .grainbrain-footer > div {
-  display: inline-block;
-  height: 60px;
   cursor: pointer;
+  text-align: center;
+  font-size: 10px;
+  color: var(--aoe4-light-gold);
 }
 .grainbrain-footer img {
-  height: 100%;
+  height: 60px;
 }
 
 /* #endregion */
