--- a/public/style/Home/main.css
+++ b/public/style/Home/main.css
@@ -128,6 +128,9 @@
   width: 100%;
 }
 
+.home-content-bottomFrame {
+  pointer-events: none;
+}
 .home-content-bottomFrame > svg {
   position: fixed;
   bottom: 0;
